--- a/index.html
+++ b/index.html
@@ -11,42 +11,48 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Page header -->
     <header class="page-header">
-      <nav class="header-navigation">
-        <a class="logo link" href="./index.html"
-          >WEB<span class="span-logo logo link">Studio</span></a
-        >
-        <ul class="menu-list list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html"> Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="" target="_blank">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Contacts -->
-      <address class="address">
-        <ul class="address-list list">
-          <li class="address-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="page-header-container container">
+        <nav class="header-navigation">
+          <a class="logo link" href="./index.html"
+            >WEB<span class="span-logo logo link">Studio</span></a
+          >
+          <ul class="menu-list list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html"> Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="address">
+          <ul class="address-list list">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Page main -->
     <main>
@@ -61,122 +67,128 @@
 
       <!-- Features -->
       <section class="section-features">
-        <h2 class="section-title" hidden>Features</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="title-item">Strategy</h3>
-            <p class="paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="title-item">Punctuality</h3>
-            <p class="paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="title-item">Diligence</h3>
-            <p class="paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="title-item">Technologies</h3>
-            <p class="paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="section-features-container container section">
+          <h2 class="section-title" hidden>Features</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="title-item">Strategy</h3>
+              <p class="paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="title-item">Punctuality</h3>
+              <p class="paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="title-item">Diligence</h3>
+              <p class="paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="title-item">Technologies</h3>
+              <p class="paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- What are we doing -->
       <section class="section-services">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="services-list list">
-          <li class="services-item">
-            <img
-              class="services-img"
-              src="./images/computer.jpg"
-              alt="Desktop app"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="services-item">
-            <img
-              class="services-img"
-              src="./images/mobile-phones.jpg"
-              alt="Mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="services-item">
-            <img
-              class="services-img"
-              src="./images/gadgets.jpg"
-              alt="Design solutions"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container section">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="services-list list">
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="./images/computer.jpg"
+                alt="Desktop app"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="./images/mobile-phones.jpg"
+                alt="Mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="./images/gadgets.jpg"
+                alt="Design solutions"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Our Team -->
       <section class="section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Mark Guerrero</h3>
-            <p class="paragraph">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Tom Ford</h3>
-            <p class="paragraph">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Camila Garcia</h3>
-            <p class="paragraph">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/danielwilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Daniel Wilson</h3>
-            <p class="paragraph">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container section">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Mark Guerrero</h3>
+              <p class="paragraph">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Tom Ford</h3>
+              <p class="paragraph">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Camila Garcia</h3>
+              <p class="paragraph">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/danielwilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-item">Daniel Wilson</h3>
+              <p class="paragraph">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
