--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <section class="section-team">
         <div class="container section">
           <h2 class="section-title">Our Team</h2>
-          <ul class="team-list list">
+          <ul class="team-list list text-centr">
             <li class="team-item">
               <img
                 class="team-img"
@@ -151,8 +151,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Mark Guerrero</h3>
-              <p class="paragraph">Product Designer</p>
+              <div class="team-img-content">
+                <h3 class="title-item">Mark Guerrero</h3>
+                <p class="paragraph">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -162,8 +164,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Tom Ford</h3>
-              <p class="paragraph">Frontend Developer</p>
+              <div class="team-img-content">
+                <h3 class="title-item">Tom Ford</h3>
+                <p class="paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -173,8 +177,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Camila Garcia</h3>
-              <p class="paragraph">Marketing</p>
+              <div class="team-img-content">
+                <h3 class="title-item">Camila Garcia</h3>
+                <p class="paragraph">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -184,8 +190,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title-item">Daniel Wilson</h3>
-              <p class="paragraph">UI Designer</p>
+              <div class="team-img-content">
+                <h3 class="title-item">Daniel Wilson</h3>
+                <p class="paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
