--- a/portfolio.html
+++ b/portfolio.html
@@ -20,183 +20,187 @@
   <body>
     <!-- Page header -->
     <header class="page-header">
-      <nav class="header-navigation">
-        <a class="logo link" href="./index.html"
-          >WEB<span class="span-logo logo link">Studio</span></a
-        >
-        <ul class="menu-list list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html"> Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="" target="_blank">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Contacts -->
-      <address class="address">
-        <ul class="address-list list">
-          <li class="address-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="page-header-container container">
+        <nav class="header-navigation">
+          <a class="logo link" href="./index.html"
+            >WEB<span class="span-logo logo link">Studio</span></a
+          >
+          <ul class="menu-list list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html"> Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="address">
+          <ul class="address-list list">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Page main -->
     <!-- Portfolio -->
     <main>
       <section class="section-portfolio">
-        <h1 class="main-title" hidden>Portfolio</h1>
-        <ul class="portfolio-list-btn list">
-          <li class="portfolio-item-btn">
-            <button class="filter-btn" type="button">All</button>
-          </li>
-          <li class="portfolio-item-btn">
-            <button class="filter-btn" type="button">Web Site</button>
-          </li>
-          <li class="portfolio-item-btn">
-            <button class="filter-btn" type="button">App</button>
-          </li>
-          <li class="portfolio-item-btn">
-            <button class="filter-btn" type="button">Design</button>
-          </li>
-          <li class="portfolio-item-btn">
-            <button class="filter-btn" type="button">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="main-title pad-marg-nav" hidden>Portfolio</h1>
+          <ul class="portfolio-list-btn list">
+            <li class="portfolio-item-btn">
+              <button class="filter-btn" type="button">All</button>
+            </li>
+            <li class="portfolio-item-btn">
+              <button class="filter-btn" type="button">Web Site</button>
+            </li>
+            <li class="portfolio-item-btn">
+              <button class="filter-btn" type="button">App</button>
+            </li>
+            <li class="portfolio-item-btn">
+              <button class="filter-btn" type="button">Design</button>
+            </li>
+            <li class="portfolio-item-btn">
+              <button class="filter-btn" type="button">Marketing</button>
+            </li>
+          </ul>
 
-        <ul class="portfolio-list list">
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/banking-app.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">
-                Banking App Interface Concept
-              </h2>
-              <p class="paragraph">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Cashless Payment</h2>
-              <p class="paragraph">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Meditation App</h2>
-              <p class="paragraph">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Taxi Service</h2>
-              <p class="paragraph">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Screen Illustrations</h2>
-              <p class="paragraph">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Online Courses</h2>
-              <p class="paragraph">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Instagram Stories Concept</h2>
-              <p class="paragraph">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Organic Food</h2>
-              <p class="paragraph">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="portfolio-link link" href="" target="_blank">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-title-item">Fresh Coffee</h2>
-              <p class="paragraph">Web Site</p>
-            </a>
-          </li>
-        </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">
+                  Banking App Interface Concept
+                </h2>
+                <p class="paragraph">App</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Cashless Payment</h2>
+                <p class="paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Meditation App</h2>
+                <p class="paragraph">App</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Taxi Service</h2>
+                <p class="paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Screen Illustrations</h2>
+                <p class="paragraph">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Online Courses</h2>
+                <p class="paragraph">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/instagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Instagram Stories Concept</h2>
+                <p class="paragraph">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/organic-food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Organic Food</h2>
+                <p class="paragraph">Web Site</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="" target="_blank">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-title-item">Fresh Coffee</h2>
+                <p class="paragraph">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
