--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,8 @@
     <!-- Portfolio -->
     <main>
       <section class="section-portfolio">
-        <div class="container">
-          <h1 class="main-title pad-marg-nav" hidden>Portfolio</h1>
+        <div class="section-portfolio-container container">
+          <h1 class="main-title" hidden>Portfolio</h1>
           <ul class="portfolio-list-btn list">
             <li class="portfolio-item-btn">
               <button class="filter-btn" type="button">All</button>
@@ -89,10 +89,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">
-                  Banking App Interface Concept
-                </h2>
-                <p class="paragraph">App</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -104,8 +106,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Cashless Payment</h2>
-                <p class="paragraph">Marketing</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Cashless Payment</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -117,8 +121,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Meditation App</h2>
-                <p class="paragraph">App</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Meditation App</h2>
+                  <p class="paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -130,8 +136,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Taxi Service</h2>
-                <p class="paragraph">Marketing</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Taxi Service</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -143,8 +151,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Screen Illustrations</h2>
-                <p class="paragraph">Design</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Screen Illustrations</h2>
+                  <p class="paragraph">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -156,8 +166,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Online Courses</h2>
-                <p class="paragraph">Marketing</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Online Courses</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -169,8 +181,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Instagram Stories Concept</h2>
-                <p class="paragraph">Design</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="paragraph">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -182,8 +198,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Organic Food</h2>
-                <p class="paragraph">Web Site</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Organic Food</h2>
+                  <p class="paragraph">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -195,8 +213,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-title-item">Fresh Coffee</h2>
-                <p class="paragraph">Web Site</p>
+                <div class="portfolio-item-content">
+                  <h2 class="portfolio-title-item">Fresh Coffee</h2>
+                  <p class="paragraph">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
