--- a/index.html
+++ b/index.html
@@ -202,13 +202,15 @@
 
     <!-- Page footer -->
     <footer class="page-footer">
-      <a class="logo link" href="./index.html"
-        >WEB<span class="span-logo logo light-logo link">Studio</span></a
-      >
-      <p class="paragraph light-logo">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="page-footer-container container">
+        <a class="logo link" href="./index.html"
+          >WEB<span class="span-logo logo light-logo link">Studio</span></a
+        >
+        <p class="paragraph light-logo">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
