--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
     <main>
       <!-- Hero -->
       <section class="section-hero">
-        <h1 class="main-title">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button class="order-service-btn" type="button">Order Service</button>
+        <div class="section-hero-container container">
+          <h1 class="main-title">
+            Effective Solutions <br />
+            for Your Business
+          </h1>
+          <button class="order-service-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- Features -->
@@ -206,7 +208,7 @@
         <a class="logo link" href="./index.html"
           >WEB<span class="span-logo logo light-logo link">Studio</span></a
         >
-        <p class="paragraph light-logo">
+        <p class="paragraph paragraph-footer light-logo">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
