--- a/index.html
+++ b/index.html
@@ -59,17 +59,14 @@
       <!-- Hero -->
       <section class="section-hero">
         <div class="section-hero-container container">
-          <h1 class="main-title">
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="order-service-btn" type="button">Order Service</button>
         </div>
       </section>
 
       <!-- Features -->
-      <section class="section-features">
-        <div class="section-features-container container section">
+      <section class="section-features section">
+        <div class="section-features-container container">
           <h2 class="section-title" hidden>Features</h2>
           <ul class="features-list list">
             <li class="features-item">
@@ -105,8 +102,8 @@
       </section>
 
       <!-- What are we doing -->
-      <section class="section-services">
-        <div class="container section">
+      <section class="section-services services">
+        <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="services-list list">
             <li class="services-item">
@@ -141,8 +138,8 @@
       </section>
 
       <!-- Our Team -->
-      <section class="section-team">
-        <div class="container section">
+      <section class="section-team section">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list text-centr">
             <li class="team-item">
