--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
     <!-- Portfolio -->
     <main>
       <section class="section-portfolio">
-        <div class="section-portfolio-container container">
+        <div class="container">
           <h1 class="main-title" hidden>Portfolio</h1>
           <ul class="portfolio-list-btn list">
             <li class="portfolio-item-btn">
