--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
     <!-- Page footer -->
     <footer class="page-footer">
       <div class="page-footer-container container">
-        <a class="logo link" href="./index.html"
+        <a class="logo logo-footer link" href="./index.html"
           >WEB<span class="span-logo logo light-logo link">Studio</span></a
         >
         <p class="paragraph paragraph-footer light-logo">
