--- a/portfolio.html
+++ b/portfolio.html
@@ -227,8 +227,10 @@
     <!-- Page footer -->
     <footer class="page-footer">
       <div class="page-footer-container container">
-        <a class="logo logo-footer link" href="./index.html"
-          >WEB<span class="span-logo logo light-logo link">Studio</span></a
+        <a class="logo-footer logo link" href="./index.html"
+          >WEB<span class="span-logo logo-footer logo light-logo link"
+            >Studio</span
+          ></a
         >
         <p class="paragraph paragraph-footer light-logo">
           Increase the flow of customers and sales for your business with
