--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </section>
 
       <!-- What are we doing -->
-      <section class="section-services services">
+      <section class="section-services section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="services-list list">
@@ -202,8 +202,10 @@
     <!-- Page footer -->
     <footer class="page-footer">
       <div class="page-footer-container container">
-        <a class="logo logo-footer link" href="./index.html"
-          >WEB<span class="span-logo logo light-logo link">Studio</span></a
+        <a class="logo-footer logo link" href="./index.html"
+          >WEB<span class="span-logo logo-footer logo light-logo link"
+            >Studio</span
+          ></a
         >
         <p class="paragraph paragraph-footer light-logo">
           Increase the flow of customers and sales for your business with
