--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
 
     <!-- Page footer -->
     <footer class="page-footer">
-      <div class="page-footer-container container">
+      <div class="container">
         <a class="logo-footer link" href="./index.html"
           >WEB<span class="span-logo light-logo link">Studio</span></a
         >
