--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="page-header">
       <div class="page-header-container container">
         <nav class="header-navigation">
-          <a class="logo link" href="./index.html"
+          <a class="logo link logo-header" href="./index.html"
             >WEB<span class="span-logo logo link">Studio</span></a
           >
           <ul class="menu-list list">
@@ -67,7 +67,7 @@
       <!-- Features -->
       <section class="section-features section">
         <div class="section-features-container container">
-          <h2 class="section-title" hidden>Features</h2>
+          <h2 class="section-title visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-item">
               <h3 class="title-item">Strategy</h3>
