--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     <main>
       <section class="section-portfolio">
         <div class="container">
-          <h1 class="main-title" hidden>Portfolio</h1>
+          <h1 class="main-title visually-hidden">Portfolio</h1>
           <ul class="portfolio-list-btn list">
             <li class="portfolio-item-btn">
               <button class="filter-btn" type="button">All</button>
