--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="page-header">
       <div class="page-header-container container">
         <nav class="header-navigation">
-          <a class="logo-header logo link" href="./index.html"
+          <a class="logo-header link" href="./index.html"
             >WEB<span class="span-logo logo link">Studio</span></a
           >
           <ul class="menu-list list">
